--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,11 +6,9 @@
 
 </head>
 <body>
-<h2>Welcome</h2>
-
-<p><a href="/add_student">Add Student</a></p>
-<p><a href="/add_course">Add Course</a></p>
-<p><a href="/report_student">Report Student</a></p>
+<h1>Welcome</h1>
+<p><a href="{% url 'add_movie' %}">Add Movie</a></p>
+<p><a href="{% url 'list_movies' %}">Display Movies</a></p>
 
 
 
