--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-<h1>Hello</h1>
+<h1>Movies</h1>
 <p><a href="{% url 'add_movie' %}">Add Movie</a></p>
 <p><a href="{% url 'list_movies' %}">Display Movies</a></p>
 
